==> aabzel/trunk/source/mcal/mcal_nrf5340/uart/uart_mcal.c <==
#include "uart_mcal.h"
#include <stddef.h>
#include <stdint.h>
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include "bit_utils.h"
#include "gpio_mcal.h"
#include "hal_nrfx_diag.h"
#include "nrfx_uarte.h"
#include "uart_isr.h"
#include "uart_custom_drv.h"
#include "software_timer.h"
#include "cli_config.h"
#include "string_reader.h"
#include "heap_allocator.h"
#include "log.h"
#include "uart_types.h"
#include "time_mcal.h"
#include "timer_mcal.h"
#include "sys_config.h"

bool uart_init_one(uint8_t num) {
    bool res = false;
    char str[50];
    LOG_WARNING(UART, "Init %u", num);
    strncpy(str, "USART_", sizeof(str));
    UartHandle_t* Node = UartGetNode(num);
    const UartConfig_t* Config = UartGetConfig(num);
    if(Config) {
        if(Node) {
#ifdef HAS_FIFO
            if(Config->rx_buff_size) {
                Node->RxFifo.array = (char*)malloc(Config->rx_buff_size);
                if(Node->RxFifo.array) {
                    res = fifo_init(&Node->RxFifo, Node->RxFifo.array, Config->rx_buff_size);
                }
            }
#endif

            NRF_UARTE_Type* UartInstance = UartNum2Ptr(num);
            if(UartInstance) {
#ifdef HAS_GPIO
                Node->config.pseltxd = Config->TxPad.byte;    ///< TXD pin number.
                Node->config.pselrxd = Config->RxPad.byte;    ///< RXD pin number.
                Node->config.pselcts = NRF_UARTE_PSEL_DISCONNECTED; ///< CTS pin number.
                Node->config.pselrts = NRF_UARTE_PSEL_DISCONNECTED; ///< RTS pin number.
#endif                                                              /*HAS_GPIO*/
                Node->config.p_context = NULL;                      ///< Context passed to interrupt handler.
                Node->config.baudrate = UartBaudRate2Code(Config->baud_rate); ///< Baud rate.
                LOG_INFO(UART, "baudrateCode 0x%x", Node->config.baudrate);
                Node->config.hal_cfg.parity =
                    NRF_UARTE_PARITY_EXCLUDED;                       ///< Parity, flow control and stop bits settings.
                Node->config.hal_cfg.hwfc = NRF_UARTE_HWFC_DISABLED; ///< Flow control configuration.
                // Node->config.interrupt_priority= NRFX_UARTE_DEFAULT_CONFIG_IRQ_PRIORITY;
                // Node->config.hal_cfg.stop = NRFX_UARTE_DEFAULT_EXTENDED_STOP_CONFIG       ;
                // Node->config.hal_cfg.paritytype=NRFX_UARTE_DEFAULT_EXTENDED_PARITYTYPE_CONFIG   ;
                nrfx_uarte_event_handler_t event_handler = NULL;
#ifdef HAS_UART_ISR
                LOG_INFO(UART, "InterruptsEnable");
                Node->config.interrupt_priority = 1;
                event_handler = UartNum2EventHandler(num);
#endif /*HAS_UART_ISR*/
                Node->uart__h.p_reg = UartNum2Ptr(num);
                Node->uart__h.drv_inst_idx = UartNum2UartIntIdx2(num);
                Node->tx_done = true;
                // uart_interupts_enable(num);
                nrfx_err_t ret = nrfx_uarte_init(&Node->uart__h, &Node->config, event_handler);
                if(NRFX_SUCCESS == ret) {
                    Node->init_done = true;
                    gpio_set_pull(Config->RxPad.byte, GPIO__PULL_UP);
                    res = true;
                }
            }
        }
    }

    if(res) {
        uart_send_wait_ll(Node, (uint8_t*)str, strlen(str));
        snprintf(str, sizeof(str), "UART%u %u bit/s", num, Config->baud_rate);
        size_t len = strlen(str);
        uart_send_wait_ll(Node, (uint8_t*)str, len);
        uart_wait_send_ll(Node, (uint8_t*)str, len);
#ifdef HAS_CLI
        res = uart_read(num, &Node->rx_dma_buf[0], 1);
#endif /*HAS_CLI*/
    }
    return res;
}

bool uart_wait_send_ll(UartHandle_t* Node, const uint8_t* const data, size_t size)  {
    bool res = false;

    res = uart_wait_tx_done_ll(Node);
    res = false;
    Node->tx_done = false;
    res = nrfx_uarte_tx_in_progress(&Node->uart__h);
    if(false == res) {
        if(data && size) {
            if(size < UART_TX_BUFF_SIZE) {
                memcpy(Node->TxBuff, data, (size_t)size);
                nrfx_err_t ret;
                Node->in_progress = true;
                ret = nrfx_uarte_tx((nrfx_uarte_t const*)&Node->uart__h, (uint8_t const*)Node->TxBuff, (size_t)size);
                if(NRFX_SUCCESS == ret) {
                    res = true;
                }
            } else {
                memcpy(Node->TxBuff, data, UART_TX_BUFF_SIZE);
                Node->in_progress = true;
                nrfx_err_t ret;
                ret = nrfx_uarte_tx((nrfx_uarte_t const*)&Node->uart__h, (uint8_t const*)Node->TxBuff,
                                    (size_t)UART_TX_BUFF_SIZE);
                if(NRFX_SUCCESS == ret) {
                    res = true;
                }
            }
        }
    }

    return res;
}

bool uart_send_wait_ll(UartHandle_t* Node , uint8_t* data, uint16_t size) {
    bool res = false;
    // We send mainly from Stack. We need wait the end of transfer.
    if(Node) {
        res = false;
        res = nrfx_uarte_tx_in_progress(&Node->uart__h);
        if((false == res) && data && size) {
            Node->tx_done = false;
            Node->in_progress = true;
            nrfx_err_t ret;
            ret = nrfx_uarte_tx((nrfx_uarte_t const*)&Node->uart__h, (uint8_t const*)data, (size_t)size);
            if(NRFX_SUCCESS == ret) {
                res = true;
#ifdef HAS_UART_ISR
                res = uart_wait_tx_done_ll(Node);
#endif /*HAS_UART_ISR*/
            }
        }
    }
    return res;
}

bool uart_set_baudrate(uint8_t num, uint32_t baudrate) {
    bool res = false;
    UartHandle_t* Node = UartGetNode(num);
    if(Node && baudrate) {
        Node->uart__h.p_reg->BAUDRATE = UartBaudRate2Code(baudrate);
        res = true;
    }

    return res;
}
