==> aabzel/trunk/source/mcal/mcal_stm32f4/uart/uart_mcal.c <==
#include "uart_mcal.h"
#include <stddef.h>
#include <stdint.h>
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include "bit_utils.h"
#include "code_generator.h"
#include "hal_diag.h"
#include "heap_allocator.h"
#include "log.h"
#include "stm32f4xx_hal.h"
#include "time_mcal.h"
#include "uart_custom_types.h"
#include "timer_mcal.h"
#include "cli_config.h"
#include "string_reader.h"
#include "sys_config.h"

bool uart_init_one(uint8_t num) {
    bool res = false;
    UartHandle_t* Node = UartGetNode(num);
    if(Node) {
        const UartConfig_t* Config = UartGetConfig(num);
        if(Config) {

            res=uart_init_general_one(Config, Node);

            // res=fifo_init(&Node->TxFifo, Node->tx_array, UART_TX_FIFO_SIZE);
            Node->rx_buff = (volatile uint8_t*)&rx_buff[num][0];
            Node->rx_buff_size = 1;
            LOG_WARNING(UART, "UART%u Init %u Bit/s", num, Config->baud_rate);
            Node->uart_h.Init.BaudRate = Config->baud_rate;
            Node->uart_h.Init.HwFlowCtl = UART_HWCONTROL_NONE;
            Node->uart_h.Init.Mode = UART_MODE_TX_RX;
            Node->uart_h.Init.OverSampling = UART_OVERSAMPLING_16;
            Node->uart_h.Init.Parity = UART_PARITY_NONE;
            Node->uart_h.Init.StopBits = UART_STOPBITS_1;
            Node->uart_h.Init.WordLength = UART_WORDLENGTH_8B;
            Node->uart_h.Instance = UartGetBase(num);
            if(Node->uart_h.Instance) {
                HAL_StatusTypeDef ret = HAL_ERROR;
                ret = HAL_UART_Init(&Node->uart_h);
                if(HAL_OK != ret) {
                    res = false;
                    LOG_ERROR(UART, "%u init Err", num);
                } else {
                    res = true;
                    LOG_INFO(UART, "%u init Ok", num);
                    Node->init_done = true;
                }
                ret = HAL_UART_Receive_IT(&Node->uart_h, (uint8_t*)Node->rx_buff, 1);
                if(HAL_OK != ret) {
                    res = false;
                }
                char str[40] = "UART";
                uart_mcal_send(num, (uint8_t*)str, 4);
                snprintf(str, sizeof(str), "UART%u", num);
                size_t len = strlen(str);
                uart_mcal_send(num, (uint8_t*)str, len);
            }
        }
    }
    return res;
}

bool uart_wait_send_ll(UartHandle_t* Node, const uint8_t* const data, size_t len) {
    bool res = false;
    LOG_DEBUG(UART, "UART%u,Wait->Send,Data:0x%p,%u byte", Node->num, data, len);
    if(Node) {
        if(Node->init_done && (len) && data) {
            res = uart_wait_tx_done_ll(Node);
            if(res) {
                Node->tx_done = false;
                Node->tx_len = len;
                HAL_StatusTypeDef ret = HAL_ERROR;
                ret = HAL_UART_Transmit_IT(&Node->uart_h, data, len);
                if(HAL_OK == ret) {
                    res = true;
                } else {
                    res = false;
                    LOG_ERROR(UART, "%u TxErr %s", Node->num, HalStatus2Str(ret));
                }
            } else {
                Node->tx_done = true;
                LOG_ERROR(UART, "%u WaitTxDoneErr", Node->num);
            }
        } else {
            LOG_ERROR(UART, "ArgErr Len:%u Ptr:0x%p", len, data);
        }
    } else {
        LOG_ERROR(UART, "%u NodeErr", Node->num);
    }
    return res;
}

bool uart_send_wait_ll(UartHandle_t* Node, const uint8_t* const  data, uint16_t len){
    bool res = false;
    // TODO make sure that global ISR enabled
    // We send mainly from Stack. We need wait the end of transfer.
    if(Node) {
        if(Node->init_done && (len) && data) {
            uint32_t init_tx_cnt = Node->tx_cnt;
#ifdef HAS_UART_TX_TIMEOUT
            uint32_t baudrate = uart_get_cfg_baudrate(Node->num);
            uint32_t time_out_us = uart_calc_transfer_time_us(baudrate, (uint32_t)len);
#endif
            uint32_t dutation_us = 0;
            uint32_t cur_us = 0;
            uint32_t start_us = time_get_us();
            HAL_StatusTypeDef stat = HAL_ERROR;
            stat = HAL_UART_Transmit_IT(&Node->uart_h, data, len);
            if(HAL_OK == stat) {
                res = true;
                // We send mainly from Stack. We need wait the end of transfer.
                // Otherwise tx data will not be valid
                while(init_tx_cnt == Node->tx_cnt) {
                    cur_us = time_get_us();
                    dutation_us = cur_us - start_us;
#ifdef HAS_UART_TX_TIMEOUT
                    if((4000 * time_out_us) < dutation_us) {
                        res = false;
                        Node->tx_time_out_cnt++;
                        break;
                    }

                    if(HAL_UART_STATE_READY == Node->uart_h.gState) {
                        res = true;
                        break;
                    }
#endif
                }
                Node->real_byte_tx_time_us = dutation_us / len;
            }

        } else {
            LOG_ERROR(UART, "SettingErr Len:%u Ptr:0x%p", len, data);
        }
    } else {
        LOG_ERROR(UART, "NodeErr");
    }
    return res;
}

bool uart_set_baudrate(uint8_t num, uint32_t baudrate) {
    bool res = false;
    USART_TypeDef* UARTx = UartGetBase(num);

    if(UARTx) {
        UartRegCtrl1_t Reg;
        Reg.reg_val = UARTx->CR1;
        uint32_t pclk = HAL_RCC_GetPCLK1Freq();
        if(1 == Reg.over8) {
            UARTx->BRR = UART_BRR_SAMPLING8(pclk, baudrate);
        } else {
            UARTx->BRR = UART_BRR_SAMPLING16(pclk, baudrate);
        }
        res = true;
    }

    return res;
}
